[package]
name = "cache_remember"
edition = "2021"
version = "0.1.3"
authors = ["Torres Farro Denis Joel <djoel_torres@hotmail.com>"]
description = "Cache inspired by Laravel's cache remember forever"
keywords = ["cache", "remember_forever" , "remember", "forget", "flush"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/JoelTorresAr/cache_remember.git"
repository = "https://github.com/JoelTorresAr/cache_remember.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }